<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/logo3" />

    <EditText
        android:id="@+id/g_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:hint="@string/mail"
        android:textColorHint="@color/text"
        android:textColor="@color/text"
        android:drawableLeft="@drawable/ic_action_mail"
        />
    <EditText
        android:id="@+id/g_sifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:hint="@string/g_sifre"
        android:textColorHint="@color/text"
        android:textColor="@color/text"
        android:password="true"
        android:drawableLeft="@drawable/ic_action_parola"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/beni_hatirla"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:buttonTint="@color/text"/>
    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:cardBackgroundColor="@color/button"
        app:cardCornerRadius="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">
        <RelativeLayout
            android:id="@+id/g_giris"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/text"
                android:textSize="25sp"
                android:textStyle="italic"
                android:text="@string/giris"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:textColor="@color/text"
        android:gravity="center"
        android:text="@string/g_yada"
        />
    <com.huawei.hms.support.hwid.ui.HuaweiIdAuthButton
        android:id="@+id/huawei_giris"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:hwid_button_theme = "hwid_button_theme_full_title"
        app:hwid_color_policy = "hwid_color_policy_blue"
        app:hwid_corner_radius = "hwid_corner_radius_large"
        />

    <TextView
        android:id="@+id/g_kaydol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:text="@string/g_hesabımyok"/>





</LinearLayout>